crates/talkbank-parser-re2c/tests/integration/snapshots/integration__parser_fixtures__main_tier_0.snap
---
source: crates/talkbank-parser-re2c/tests/integration/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: NOF
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Action:
        zero: "0"
        annotations: []
  terminator:
    Period: "."
  postcodes: []
  media_bullet:
    MediaBullet:
      raw_text: "\u00150_1160\u0015"
      start_time: "0"
      end_time: "1160"
