crates/talkbank-parser-re2c/tests/integration/snapshots/integration__parser_fixtures__main_tier_3.snap
---
source: crates/talkbank-parser-re2c/tests/integration/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: OLN
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Action:
        zero: "0"
        annotations: []
  terminator:
    Period: "."
  postcodes: []
  media_bullet:
    MediaBullet:
      raw_text: "\u00153110_4450\u0015"
      start_time: "3110"
      end_time: "4450"
