crates/talkbank-parser-re2c/tests/integration/snapshots/integration__parser_fixtures__main_tier_5.snap
---
source: crates/talkbank-parser-re2c/tests/integration/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: FAN
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Event: w3_33
  terminator:
    Period: "."
  postcodes: []
  media_bullet:
    MediaBullet:
      raw_text: "\u00155600_6600\u0015"
      start_time: "5600"
      end_time: "6600"
