crates/talkbank-parser-re2c/tests/integration/snapshots/integration__parser_fixtures__main_tier_6.snap
---
source: crates/talkbank-parser-re2c/tests/integration/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: NOF
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Action:
        zero: "0"
        annotations: []
  terminator:
    Period: "."
  postcodes: []
  media_bullet:
    MediaBullet:
      raw_text: "\u00156600_8130\u0015"
      start_time: "6600"
      end_time: "8130"
