crates/talkbank-parser-re2c/tests/integration/snapshots/integration__parser_fixtures__main_tier_7.snap
---
source: crates/talkbank-parser-re2c/tests/integration/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: OLF
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Action:
        zero: "0"
        annotations: []
  terminator:
    Period: "."
  postcodes: []
  media_bullet:
    MediaBullet:
      raw_text: "\u00158130_8960\u0015"
      start_time: "8130"
      end_time: "8960"
